# hello_word

./: .env  Cargo.toml  docker-compose.yml
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
