[package]
name = "hello_word"
version = "0.1.0"
authors = ["Administrator <admin@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
serde= { version="1.0.118",features=["derive"] }
actix-multipart = "0.3"
futures = "0.3.1"
sanitize-filename = "0.2"
dotenv="0.15.0"
config="0.10.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = "0.7.0"
tokio-postgres = "0.7.0"
